* Fixed scrollbar bug on merchant landingpage * Added min-height for merchant landingpage banner

--- a/src/Merchants/Resources/app/storefront/src/scss/base.scss
+++ b/src/Merchants/Resources/app/storefront/src/scss/base.scss
@@ -57,7 +57,9 @@
 
 // Banner
 #merchant-header-banner {
-    background-color: rgba(216, 216, 216, 0.27);
+    margin: 0;
+    min-height: 340px;
+    background-color: rgba(216, 216, 216, .27);
 
     &.no-description {
         margin-bottom: 40px;
